--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/css/bootstrap.min.css"
           integrity="sha384-DhY6onE6f3zzKbjUPRc2hOzGAdEf4/Dz+WJwBvEYL/lkkIsI3ihufq9hk9K4lVoK" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
-    <title>Bootstrap 5</title>
+    <script src="https://kit.fontawesome.com/af57e4833a.js" crossorigin="anonymous"></script>
+    <title>Евакуатор Львів</title>
 </head>
 <body>
-<nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
-        <a href="" class="navbar-brand">Yurii Chornii</a>
+        <a href="" class="navbar-brand">Евакуатор Львів</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent"
                 aria-controls="navbarContent" aria-expanded="false">
             <span class="navbar-toggler-icon"></span>
@@ -22,45 +23,35 @@
         <div class="collapse navbar-collapse" id="navbarContent">
             <ul class="navbar-nav mr-auto mb-2">
                 <li class="nav-item">
-                    <a href="" class="nav-link">Home</a>
+                    <a href="#aboutUs" class="nav-link">Про нас</a>
                 </li>
                 <li class="nav-item">
-                    <a href="" class="nav-link">About Us</a>
-                </li>
-                <li class="nav-item">
-                    <a href="" class="nav-link">Delivery</a>
-                </li>
-                <li class="nav-item">
-                    <a href="" class="nav-link">Blog</a>
+                    <a href="" class="nav-link">Контакти</a>
                 </li>
             </ul>
-            <div class="d-flex">
-                <button class="btn btn-outline-success" data-toggle="modal" data-target="#exampleModal">Sign in</button>
-                <button class="btn btn-outline-danger ml-3">Sign out</button>
-            </div>
         </div>
     </div>
 </nav>
 
-<!--modal-->
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Form</h5>
-                <button class="btn-close" data-dismiss="modal" aria-label="close"></button>
-            </div>
-            <div class="modal-body">
-                .........
-            </div>
-            <div class="modal-footer">
-                <button class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button class="btn btn-secondary">Save changes</button>
-            </div>
-        </div>
-    </div>
-</div>
-<!--modal-->
+<!--&lt;!&ndash;modal&ndash;&gt;-->
+<!--<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">-->
+<!--    <div class="modal-dialog">-->
+<!--        <div class="modal-content">-->
+<!--            <div class="modal-header">-->
+<!--                <h5 class="modal-title" id="exampleModalLabel">Form</h5>-->
+<!--                <button class="btn-close" data-dismiss="modal" aria-label="close"></button>-->
+<!--            </div>-->
+<!--            <div class="modal-body">-->
+<!--                .........-->
+<!--            </div>-->
+<!--            <div class="modal-footer">-->
+<!--                <button class="btn btn-secondary" data-dismiss="modal">Close</button>-->
+<!--                <button class="btn btn-secondary">Save changes</button>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</div>-->
+<!--&lt;!&ndash;modal&ndash;&gt;-->
 
 <main>
     <div class="carousel slide" id="carouselControls" data-ride="carousel">
@@ -86,13 +77,15 @@
             <span class="carousel-control-next-icon"></span>
         </a>
     </div>
+
+
     <div class="container my-5">
         <div class="row">
-            <div class="col-md-4" col-sm-12>
+            <div class="col-md-4 col-sm-12">
                 <img class="w-100" src="https://wallpaperaccess.com/full/508043.jpg" alt="">
             </div>
             <div class="col-md-8 col-sm-12 text-center">
-                <h2 class="my-3">About Us</h2>
+                <h2 class="my-3" id="aboutUs">About Us</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque consequuntur harum molestias tempore.
                     Accusantium, ad alias amet asperiores aspernatur deleniti dicta dolores eius eligendi et id
                     inventore laborum magni minima mollitia necessitatibus nesciunt nisi nobis nulla odio placeat
@@ -166,6 +159,10 @@
     </div>
 </main>
 
+<!--call button-->
+<a href="tel:0937403014" id="call" class="bg-dark"><i class="fas fa-phone-alt"></i></a>
+
+<!--call button-->
 
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/js/bootstrap.bundle.min.js"
         integrity="sha384-BOsAfwzjNJHrJ8cZidOg56tcQWfp6y72vEJ8xQ9w6Quywb24iOsW913URv1IS4GD"
