--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Евакуатор Львів</title>
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
     <div class="container">
         <a href="" class="navbar-brand">Евакуатор Львів</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent"
@@ -34,7 +34,7 @@
 </nav>
 <header>
     <div id="slider"></div>
-    <div id="headerBackBox"></div>
+    <div id="headerBackBox"><div class="blur"></div></div>
     <div id="header-text-box">
         <span class="transparent-text">always</span><br>
         <span>ready</span><br>
@@ -125,9 +125,14 @@
 
 
 <!--call button-->
-<a href="tel:0937403014" id="call" class="bg-dark"><i class="fas fa-phone-alt"></i></a>
+<a href="tel:0633686777" id="call" class="bg-dark"><i class="fas fa-phone-alt"></i></a>
 
 <!--call button-->
+<!--tow truck-->
+<div id="towTruck">
+    <img src="./images/towTruck.png" alt="tow truck">
+</div>
+<!--tow truck-->
 
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/js/bootstrap.bundle.min.js"
         integrity="sha384-BOsAfwzjNJHrJ8cZidOg56tcQWfp6y72vEJ8xQ9w6Quywb24iOsW913URv1IS4GD"
