Was made footer

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <header>
     <div id="slider"></div>
     <div id="headerBackBox">
-        <div class="blur"></div>
+        <h4 id="headerBackBox-subtitle">Надаємо послуги евакуатора <a href="tel:0633686777">0633686777</a></h4>
     </div>
     <div id="header-text-box">
         <span class="transparent-text">always</span><br>
@@ -44,86 +44,86 @@
     </div>
 </header>
 
-<main id="aboutUs">
-    <div class="container my-5">
-        <div class="row">
-            <div class="col-md-4 col-sm-12">
-                <img class="w-100" src="https://wallpaperaccess.com/full/508043.jpg" alt="">
-            </div>
-            <div class="col-md-8 col-sm-12 text-center">
-                <h2 class="my-3">About Us</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque consequuntur harum molestias tempore.
-                    Accusantium, ad alias amet asperiores aspernatur deleniti dicta dolores eius eligendi et id
-                    inventore laborum magni minima mollitia necessitatibus nesciunt nisi nobis nulla odio placeat
-                    provident quae quaerat quas quia reiciendis repellat soluta sunt tenetur vitae voluptate.</p>
-            </div>
+<!--<main id="aboutUs">-->
+<!--    <div class="container my-5">-->
+<!--        <div class="row">-->
+<!--            <div class="col-md-4 col-sm-12">-->
+<!--                <img class="w-100" src="https://wallpaperaccess.com/full/508043.jpg" alt="">-->
+<!--            </div>-->
+<!--            <div class="col-md-8 col-sm-12 text-center">-->
+<!--                <h2 class="my-3">About Us</h2>-->
+<!--                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque consequuntur harum molestias tempore.-->
+<!--                    Accusantium, ad alias amet asperiores aspernatur deleniti dicta dolores eius eligendi et id-->
+<!--                    inventore laborum magni minima mollitia necessitatibus nesciunt nisi nobis nulla odio placeat-->
+<!--                    provident quae quaerat quas quia reiciendis repellat soluta sunt tenetur vitae voluptate.</p>-->
+<!--            </div>-->
 
-        </div>
-        <h2 class="text-center my-5">Lorem ipsum dolor</h2>
-        <div class="row">
-            <div class="col-md-4 col-sm-6 text-center">
-                <h4>Lorem ipsum</h4>
-                <svg width="3em" height="3em" viewBox="0 0 16 16" class="bi bi-card-image" fill="currentColor"
-                     xmlns="http://www.w3.org/2000/svg">
-                    <path fill-rule="evenodd"
-                          d="M14.5 3h-13a.5.5 0 0 0-.5.5v9c0 .013 0 .027.002.04V12l2.646-2.354a.5.5 0 0 1 .63-.062l2.66 1.773 3.71-3.71a.5.5 0 0 1 .577-.094L15 9.499V3.5a.5.5 0 0 0-.5-.5zm-13-1A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h13a1.5 1.5 0 0 0 1.5-1.5v-9A1.5 1.5 0 0 0 14.5 2h-13zm4.502 3.5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0z"/>
-                </svg>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A beatae corporis dolor eius libero
-                    nulla.</p>
-            </div>
-            <div class="col-md-4 col-sm-6 text-center">
-                <h4>Lorem ipsum</h4>
-                <svg width="3em" height="3em" viewBox="0 0 16 16" class="bi bi-card-image" fill="currentColor"
-                     xmlns="http://www.w3.org/2000/svg">
-                    <path fill-rule="evenodd"
-                          d="M14.5 3h-13a.5.5 0 0 0-.5.5v9c0 .013 0 .027.002.04V12l2.646-2.354a.5.5 0 0 1 .63-.062l2.66 1.773 3.71-3.71a.5.5 0 0 1 .577-.094L15 9.499V3.5a.5.5 0 0 0-.5-.5zm-13-1A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h13a1.5 1.5 0 0 0 1.5-1.5v-9A1.5 1.5 0 0 0 14.5 2h-13zm4.502 3.5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0z"/>
-                </svg>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A beatae corporis dolor eius libero
-                    nulla.</p>
-            </div>
-            <div class="col-md-4 col-sm-6 text-center">
-                <h4>Lorem ipsum</h4>
-                <svg width="3em" height="3em" viewBox="0 0 16 16" class="bi bi-card-image" fill="currentColor"
-                     xmlns="http://www.w3.org/2000/svg">
-                    <path fill-rule="evenodd"
-                          d="M14.5 3h-13a.5.5 0 0 0-.5.5v9c0 .013 0 .027.002.04V12l2.646-2.354a.5.5 0 0 1 .63-.062l2.66 1.773 3.71-3.71a.5.5 0 0 1 .577-.094L15 9.499V3.5a.5.5 0 0 0-.5-.5zm-13-1A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h13a1.5 1.5 0 0 0 1.5-1.5v-9A1.5 1.5 0 0 0 14.5 2h-13zm4.502 3.5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0z"/>
-                </svg>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A beatae corporis dolor eius libero
-                    nulla.</p>
-            </div>
-            <div class="col-md-4 col-sm-6 text-center">
-                <h4>Lorem ipsum</h4>
-                <svg width="3em" height="3em" viewBox="0 0 16 16" class="bi bi-card-image" fill="currentColor"
-                     xmlns="http://www.w3.org/2000/svg">
-                    <path fill-rule="evenodd"
-                          d="M14.5 3h-13a.5.5 0 0 0-.5.5v9c0 .013 0 .027.002.04V12l2.646-2.354a.5.5 0 0 1 .63-.062l2.66 1.773 3.71-3.71a.5.5 0 0 1 .577-.094L15 9.499V3.5a.5.5 0 0 0-.5-.5zm-13-1A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h13a1.5 1.5 0 0 0 1.5-1.5v-9A1.5 1.5 0 0 0 14.5 2h-13zm4.502 3.5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0z"/>
-                </svg>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A beatae corporis dolor eius libero
-                    nulla.</p>
-            </div>
-            <div class="col-md-4 col-sm-6 text-center">
-                <h4>Lorem ipsum</h4>
-                <svg width="3em" height="3em" viewBox="0 0 16 16" class="bi bi-card-image" fill="currentColor"
-                     xmlns="http://www.w3.org/2000/svg">
-                    <path fill-rule="evenodd"
-                          d="M14.5 3h-13a.5.5 0 0 0-.5.5v9c0 .013 0 .027.002.04V12l2.646-2.354a.5.5 0 0 1 .63-.062l2.66 1.773 3.71-3.71a.5.5 0 0 1 .577-.094L15 9.499V3.5a.5.5 0 0 0-.5-.5zm-13-1A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h13a1.5 1.5 0 0 0 1.5-1.5v-9A1.5 1.5 0 0 0 14.5 2h-13zm4.502 3.5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0z"/>
-                </svg>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A beatae corporis dolor eius libero
-                    nulla.</p>
-            </div>
-            <div class="col-md-4 col-sm-6 text-center">
-                <h4>Lorem ipsum</h4>
-                <svg width="3em" height="3em" viewBox="0 0 16 16" class="bi bi-card-image" fill="currentColor"
-                     xmlns="http://www.w3.org/2000/svg">
-                    <path fill-rule="evenodd"
-                          d="M14.5 3h-13a.5.5 0 0 0-.5.5v9c0 .013 0 .027.002.04V12l2.646-2.354a.5.5 0 0 1 .63-.062l2.66 1.773 3.71-3.71a.5.5 0 0 1 .577-.094L15 9.499V3.5a.5.5 0 0 0-.5-.5zm-13-1A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h13a1.5 1.5 0 0 0 1.5-1.5v-9A1.5 1.5 0 0 0 14.5 2h-13zm4.502 3.5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0z"/>
-                </svg>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A beatae corporis dolor eius libero
-                    nulla.</p>
-            </div>
-        </div>
-    </div>
-</main>
+<!--        </div>-->
+<!--        <h2 class="text-center my-5">Lorem ipsum dolor</h2>-->
+<!--        <div class="row">-->
+<!--            <div class="col-md-4 col-sm-6 text-center">-->
+<!--                <h4>Lorem ipsum</h4>-->
+<!--                <svg width="3em" height="3em" viewBox="0 0 16 16" class="bi bi-card-image" fill="currentColor"-->
+<!--                     xmlns="http://www.w3.org/2000/svg">-->
+<!--                    <path fill-rule="evenodd"-->
+<!--                          d="M14.5 3h-13a.5.5 0 0 0-.5.5v9c0 .013 0 .027.002.04V12l2.646-2.354a.5.5 0 0 1 .63-.062l2.66 1.773 3.71-3.71a.5.5 0 0 1 .577-.094L15 9.499V3.5a.5.5 0 0 0-.5-.5zm-13-1A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h13a1.5 1.5 0 0 0 1.5-1.5v-9A1.5 1.5 0 0 0 14.5 2h-13zm4.502 3.5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0z"/>-->
+<!--                </svg>-->
+<!--                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A beatae corporis dolor eius libero-->
+<!--                    nulla.</p>-->
+<!--            </div>-->
+<!--            <div class="col-md-4 col-sm-6 text-center">-->
+<!--                <h4>Lorem ipsum</h4>-->
+<!--                <svg width="3em" height="3em" viewBox="0 0 16 16" class="bi bi-card-image" fill="currentColor"-->
+<!--                     xmlns="http://www.w3.org/2000/svg">-->
+<!--                    <path fill-rule="evenodd"-->
+<!--                          d="M14.5 3h-13a.5.5 0 0 0-.5.5v9c0 .013 0 .027.002.04V12l2.646-2.354a.5.5 0 0 1 .63-.062l2.66 1.773 3.71-3.71a.5.5 0 0 1 .577-.094L15 9.499V3.5a.5.5 0 0 0-.5-.5zm-13-1A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h13a1.5 1.5 0 0 0 1.5-1.5v-9A1.5 1.5 0 0 0 14.5 2h-13zm4.502 3.5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0z"/>-->
+<!--                </svg>-->
+<!--                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A beatae corporis dolor eius libero-->
+<!--                    nulla.</p>-->
+<!--            </div>-->
+<!--            <div class="col-md-4 col-sm-6 text-center">-->
+<!--                <h4>Lorem ipsum</h4>-->
+<!--                <svg width="3em" height="3em" viewBox="0 0 16 16" class="bi bi-card-image" fill="currentColor"-->
+<!--                     xmlns="http://www.w3.org/2000/svg">-->
+<!--                    <path fill-rule="evenodd"-->
+<!--                          d="M14.5 3h-13a.5.5 0 0 0-.5.5v9c0 .013 0 .027.002.04V12l2.646-2.354a.5.5 0 0 1 .63-.062l2.66 1.773 3.71-3.71a.5.5 0 0 1 .577-.094L15 9.499V3.5a.5.5 0 0 0-.5-.5zm-13-1A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h13a1.5 1.5 0 0 0 1.5-1.5v-9A1.5 1.5 0 0 0 14.5 2h-13zm4.502 3.5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0z"/>-->
+<!--                </svg>-->
+<!--                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A beatae corporis dolor eius libero-->
+<!--                    nulla.</p>-->
+<!--            </div>-->
+<!--            <div class="col-md-4 col-sm-6 text-center">-->
+<!--                <h4>Lorem ipsum</h4>-->
+<!--                <svg width="3em" height="3em" viewBox="0 0 16 16" class="bi bi-card-image" fill="currentColor"-->
+<!--                     xmlns="http://www.w3.org/2000/svg">-->
+<!--                    <path fill-rule="evenodd"-->
+<!--                          d="M14.5 3h-13a.5.5 0 0 0-.5.5v9c0 .013 0 .027.002.04V12l2.646-2.354a.5.5 0 0 1 .63-.062l2.66 1.773 3.71-3.71a.5.5 0 0 1 .577-.094L15 9.499V3.5a.5.5 0 0 0-.5-.5zm-13-1A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h13a1.5 1.5 0 0 0 1.5-1.5v-9A1.5 1.5 0 0 0 14.5 2h-13zm4.502 3.5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0z"/>-->
+<!--                </svg>-->
+<!--                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A beatae corporis dolor eius libero-->
+<!--                    nulla.</p>-->
+<!--            </div>-->
+<!--            <div class="col-md-4 col-sm-6 text-center">-->
+<!--                <h4>Lorem ipsum</h4>-->
+<!--                <svg width="3em" height="3em" viewBox="0 0 16 16" class="bi bi-card-image" fill="currentColor"-->
+<!--                     xmlns="http://www.w3.org/2000/svg">-->
+<!--                    <path fill-rule="evenodd"-->
+<!--                          d="M14.5 3h-13a.5.5 0 0 0-.5.5v9c0 .013 0 .027.002.04V12l2.646-2.354a.5.5 0 0 1 .63-.062l2.66 1.773 3.71-3.71a.5.5 0 0 1 .577-.094L15 9.499V3.5a.5.5 0 0 0-.5-.5zm-13-1A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h13a1.5 1.5 0 0 0 1.5-1.5v-9A1.5 1.5 0 0 0 14.5 2h-13zm4.502 3.5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0z"/>-->
+<!--                </svg>-->
+<!--                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A beatae corporis dolor eius libero-->
+<!--                    nulla.</p>-->
+<!--            </div>-->
+<!--            <div class="col-md-4 col-sm-6 text-center">-->
+<!--                <h4>Lorem ipsum</h4>-->
+<!--                <svg width="3em" height="3em" viewBox="0 0 16 16" class="bi bi-card-image" fill="currentColor"-->
+<!--                     xmlns="http://www.w3.org/2000/svg">-->
+<!--                    <path fill-rule="evenodd"-->
+<!--                          d="M14.5 3h-13a.5.5 0 0 0-.5.5v9c0 .013 0 .027.002.04V12l2.646-2.354a.5.5 0 0 1 .63-.062l2.66 1.773 3.71-3.71a.5.5 0 0 1 .577-.094L15 9.499V3.5a.5.5 0 0 0-.5-.5zm-13-1A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h13a1.5 1.5 0 0 0 1.5-1.5v-9A1.5 1.5 0 0 0 14.5 2h-13zm4.502 3.5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0z"/>-->
+<!--                </svg>-->
+<!--                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A beatae corporis dolor eius libero-->
+<!--                    nulla.</p>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</main>-->
 
 
 <!--call button-->
