--- a/index.html
+++ b/index.html
@@ -27,6 +27,15 @@
                     <a href="#aboutUs" class="nav-link">Про нас</a>
                 </li>
                 <li class="nav-item">
+                    <a href="#advantages" class="nav-link">Переваги</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#specialOffer" class="nav-link">Акція</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#price" class="nav-link">Ціни</a>
+                </li>
+                <li class="nav-item">
                     <a href="#contacts" class="nav-link">Контакти</a>
                 </li>
             </ul>
@@ -50,15 +59,84 @@
 
 
 <main id="aboutUs">
-    <div class="row">
-        <div class="coll-8 coll-md-6" id="aboutUsImgBox"></div>
-        <div class="coll-12 coll-md-6"></div>
+    <div class="row" style="margin: 0;">
+        <div class="col-12 col-lg-6" id="aboutUsImgBox">
+        </div>
+        <div class="col-12 col-lg-6" id="aboutUsTextBox">
+            <h3>About us</h3>
+            <p>Евакуатор Львів це наша допомога 24/7. Незалежно від погодних умов, днів тижня, та локації ми готові здійснити евакуацію та перевезення вашого автомобіля.</p>
+            <p>Наші ціни мінімальні та гнучкі. Водій евакуатора не тільки акуратно завантажить ваш автомобіль а й надасть усю необхідну допомогу.</p>
+            <p>Одразу після вашого дзвінка наші водії відправляться вам на допомогу та як найшвидше допоможуть, якісно та надійно!</p>
+        </div>
+    </div>
+
+    <div class="row ourAdvantages" id="advantages">
+        <div class="col-4">
+            <div class="advantages-item border-right">
+                <div class="row">
+                    <div class="col-12 col-md-6"><i class="far fa-clock"></i></div>
+                    <div class="col-12 col-md-6">Працюємо 24/7</div>
+                </div>
+            </div>
+        </div>
+        <div class="col-4">
+            <div class="advantages-item">
+                <div class="row">
+                    <div class="col-12 col-md-6"><i class="fas fa-map-marked-alt"></i></div>
+                    <div class="col-12 col-md-6">У місті та за містом</div>
+                </div>
+            </div>
+        </div>
+        <div class="col-4">
+            <div class="advantages-item border-left">
+                <div class="row">
+                    <div class="col-12 col-md-6"><i class="fas fa-fighter-jet"></i></div>
+                    <div class="col-12 col-md-6">Виїзд негайно після дзвінка</div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+
+    <div id="specialOffer">
+
+    </div>
+
+
+
+
+    <div class="row ourAdvantages" id="price">
+        <div class="col-4">
+            <div class="advantages-item border-right">
+                <div class="row">
+                    <div class="col-12 col-md-6"><i><small>600</small><sub><small>₴</small></sub></i></div>
+                    <div class="col-12 col-md-6">Повна ціна в межах міста.</div>
+                </div>
+            </div>
+        </div>
+        <div class="col-4">
+            <div class="advantages-item">
+                <div class="row">
+                    <div class="col-12 col-md-6"><i><small>9</small><sub><small>₴/км</small></sub></i></div>
+                    <div class="col-12 col-md-6">У місті та за містом</div>
+                </div>
+            </div>
+        </div>
+        <div class="col-4">
+            <div class="advantages-item border-left">
+                <div class="row">
+                    <div class="col-12 col-md-6"><i><small>200</small><sub><small>₴</small></sub></i></div>
+                    <div class="col-12 col-md-6">Завантаження та розвантаження. (за містом)</div>
+                </div>
+            </div>
+        </div>
     </div>
 
 
 
 </main>
-
 
 
 
