changed vertical photos

--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
         <h1 id="headerBackBox-subtitle">Надаємо послуги евакуатора <a href="tel:0633686777">0633686777</a></h1>
     </div>
     <div id="header-text-box">
-        <span class="transparent-text">always</span><br>
-        <span>ready</span><br>
-        <span class="transparent-text">to help.</span>
+        <span class="transparent-text">завжди</span><br>
+        <span>готові</span><br>
+        <span class="transparent-text">допомогти.</span>
     </div>
 </header>
 
@@ -63,7 +63,7 @@
         <div class="col-12 col-lg-6" id="aboutUsImgBox">
         </div>
         <div class="col-12 col-lg-6" id="aboutUsTextBox">
-            <h3>About us</h3>
+            <h3>Про нас</h3>
             <p>Евакуатор Львів це наша допомога 24/7. Незалежно від погодних умов, днів тижня, та локації ми готові здійснити евакуацію та перевезення вашого автомобіля.</p>
             <p>Наші ціни мінімальні та гнучкі. Водій евакуатора не тільки акуратно завантажить ваш автомобіль а й надасть усю необхідну допомогу.</p>
             <p>Одразу після вашого дзвінка наші водії відправляться вам на допомогу та як найшвидше допоможуть, якісно та надійно!</p>
@@ -120,7 +120,7 @@
             <div class="advantages-item">
                 <div class="row">
                     <div class="col-12 col-md-6"><i><small>9</small><sub><small>₴/км</small></sub></i></div>
-                    <div class="col-12 col-md-6">У місті та за містом</div>
+                    <div class="col-12 col-md-6">За межами міста.</div>
                 </div>
             </div>
         </div>
@@ -154,7 +154,7 @@
 
 <footer id="contacts">
     <div class="footer-contacts-box">
-        <div class="contacts-header">Contacts</div>
+        <div class="contacts-header">Контакти</div>
         <div class="row contacts-row">
             <div class="col-12 col-md-6 col-xl-3"><i class="fas fa-phone-alt"></i><a href="tel:0633686777"> 0633686777</a></div>
             <div class="col-12 col-md-6 col-xl-3"><i class="fas fa-phone-alt"></i><a href="tel:0682790990"> 0682790990</a></div>
@@ -169,7 +169,7 @@
         <p>Copyright © 2020, Yurii Chornii.</p>
         <p>All Rights Reserved.</p>
     </div>
-    <a href="#slider" id="backToTop">Back to top</a>
+    <a href="#slider" id="backToTop">Вгору</a>
 </footer>
 
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/js/bootstrap.bundle.min.js"
