final without call back form

--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
                 aria-controls="navbarContent" aria-expanded="false">
             <span class="navbar-toggler-icon"></span>
         </button>
-
         <div class="collapse navbar-collapse" id="navbarContent">
             <ul class="navbar-nav mr-auto ">
                 <li class="nav-item">
@@ -30,10 +29,10 @@
                     <a href="#advantages" class="nav-link">Переваги</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#specialOffer" class="nav-link">Акція</a>
+                    <a href="#price" class="nav-link">Ціни</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#price" class="nav-link">Ціни</a>
+                    <a href="#specialOffer" class="nav-link">Акція</a>
                 </li>
                 <li class="nav-item">
                     <a href="#contacts" class="nav-link">Контакти</a>
@@ -53,23 +52,21 @@
         <span class="transparent-text">допомогти.</span>
     </div>
 </header>
-
-
-
-
-
 <main id="aboutUs">
     <div class="row" style="margin: 0;">
         <div class="col-12 col-lg-6" id="aboutUsImgBox">
         </div>
         <div class="col-12 col-lg-6" id="aboutUsTextBox">
             <h3>Про нас</h3>
-            <p>Евакуатор Львів це наша допомога 24/7. Незалежно від погодних умов, днів тижня, та локації ми готові здійснити евакуацію та перевезення вашого автомобіля.</p>
-            <p>Наші ціни мінімальні та гнучкі. Водій евакуатора не тільки акуратно завантажить ваш автомобіль а й надасть усю необхідну допомогу.</p>
-            <p>Одразу після вашого дзвінка наші водії відправляться вам на допомогу та як найшвидше допоможуть, якісно та надійно!</p>
+            <p>Евакуатор Львів це наша допомога 24/7. Незалежно від погодних умов, днів тижня, та локації ми готові
+                здійснити евакуацію та перевезення вашого автомобіля.</p>
+            <p>Наші ціни мінімальні та гнучкі. Водій евакуатора не тільки акуратно завантажить ваш автомобіль а й
+                надасть усю необхідну допомогу.</p>
+            <p>Одразу після вашого дзвінка наші водії відправляться вам на допомогу та як найшвидше допоможуть, якісно
+                та надійно!</p>
+            <p>Евакуатор обладнаний лебідкою.</p>
         </div>
     </div>
-
     <div class="row ourAdvantages" id="advantages">
         <div class="col-4">
             <div class="advantages-item border-right">
@@ -96,70 +93,37 @@
             </div>
         </div>
     </div>
-
-
-
-
-    <div id="specialOffer">
-
+    <div class="row" id="price">
+        <h3 class="col-12 price-header">Ціни</h3>
+        <div class="col-12 price-item card "><h5>Вартість послуг в межах Львова:</h5> 600 гривень повна вартість, не
+            залежно від відстані перевезення автомобіля
+        </div>
+        <div class="col-12 price-item"><h5>Вартість послуг за межами Львова:</h5> 9 грн/км загального пробігу з точки
+            виїзду увакуатора і до повернення назад +200 гривень завантаження та розвантаження евакуатора
+        </div>
+        <div class="col-12 price-item" id="specialOffer"><h5>Знижка</h5> при відстані перевезення автомобіля більше, ніж
+            200 км завантаження та розвантаження евакуатора <span>безкоштовне</span></div>
     </div>
-
-
-
-
-    <div class="row ourAdvantages" id="price">
-        <div class="col-4">
-            <div class="advantages-item border-right">
-                <div class="row">
-                    <div class="col-12 col-md-6"><i><small>600</small><sub><small>₴</small></sub></i></div>
-                    <div class="col-12 col-md-6">Повна ціна в межах міста.</div>
-                </div>
-            </div>
-        </div>
-        <div class="col-4">
-            <div class="advantages-item">
-                <div class="row">
-                    <div class="col-12 col-md-6"><i><small>9</small><sub><small>₴/км</small></sub></i></div>
-                    <div class="col-12 col-md-6">За межами міста.</div>
-                </div>
-            </div>
-        </div>
-        <div class="col-4">
-            <div class="advantages-item border-left">
-                <div class="row">
-                    <div class="col-12 col-md-6"><i><small>200</small><sub><small>₴</small></sub></i></div>
-                    <div class="col-12 col-md-6">Завантаження та розвантаження. (за містом)</div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-
-
 </main>
-
-
-
-
-
 <!--call button-->
 <a href="tel:0633686777" id="call" class="bg-info"><i class="fas fa-phone-alt"></i></a>
-
 <!--call button-->
 <!--tow truck-->
 <div id="towTruck">
     <img src="./images/towTruck.png" alt="tow truck">
 </div>
 <!--tow truck-->
-
 <footer id="contacts">
     <div class="footer-contacts-box">
         <div class="contacts-header">Контакти</div>
         <div class="row contacts-row">
-            <div class="col-12 col-md-6 col-xl-3"><i class="fas fa-phone-alt"></i><a href="tel:0633686777"> 0633686777</a></div>
-            <div class="col-12 col-md-6 col-xl-3"><i class="fas fa-phone-alt"></i><a href="tel:0682790990"> 0682790990</a></div>
+            <div class="col-12 col-md-6 col-xl-3"><i class="fas fa-phone-alt"></i><a href="tel:0633686777">
+                0633686777</a></div>
+            <div class="col-12 col-md-6 col-xl-3"><i class="fas fa-phone-alt"></i><a href="tel:0682790990">
+                0682790990</a></div>
             <div class="col-12 col-md-6 col-xl-3"><i class="fas fa-envelope"></i> egork1131@gmail.com</div>
-            <div class="col-12 col-md-6 col-xl-3"><i class="fas fa-map-marker-alt"></i>  м.Львів, вул.Городоцька, 300</div>
+            <div class="col-12 col-md-6 col-xl-3"><i class="fas fa-map-marker-alt"></i> м.Львів, вул.Городоцька, 300
+            </div>
         </div>
     </div>
     <div class="footer-line-box">
@@ -171,7 +135,6 @@
     </div>
     <a href="#slider" id="backToTop">Вгору</a>
 </footer>
-
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/js/bootstrap.bundle.min.js"
         integrity="sha384-BOsAfwzjNJHrJ8cZidOg56tcQWfp6y72vEJ8xQ9w6Quywb24iOsW913URv1IS4GD"
         crossorigin="anonymous"></script>
