--- a/index.html
+++ b/index.html
@@ -95,13 +95,13 @@
     </div>
     <div class="row" id="price">
         <h3 class="col-12 price-header">Ціни</h3>
-        <div class="col-12 price-item card "><h5>Вартість послуг в межах Львова:</h5> 600 гривень повна вартість, не
+        <div class="col-12 price-item card"><h5>Вартість послуг в межах Львова:</h5> 600 гривень повна вартість, не
             залежно від відстані перевезення автомобіля
         </div>
-        <div class="col-12 price-item"><h5>Вартість послуг за межами Львова:</h5> 9 грн/км загального пробігу з точки
+        <div class="col-12 price-item card"><h5>Вартість послуг за межами Львова:</h5> 9 грн/км загального пробігу з точки
             виїзду увакуатора і до повернення назад +200 гривень завантаження та розвантаження евакуатора
         </div>
-        <div class="col-12 price-item" id="specialOffer"><h5>Знижка</h5> при відстані перевезення автомобіля більше, ніж
+        <div class="col-12 price-item card" id="specialOffer"><h5>Знижка</h5> при відстані перевезення автомобіля більше, ніж
             200 км завантаження та розвантаження евакуатора <span>безкоштовне</span></div>
     </div>
 </main>
