final without call back form

--- a/index.html
+++ b/index.html
@@ -11,6 +11,16 @@
     <script src="https://kit.fontawesome.com/af57e4833a.js" crossorigin="anonymous"></script>
     <link rel="icon" href="./images/favicon.ico" type="image/x-icon"/>
     <title>Евакуатор Львів</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-182857543-1">
+    </script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-182857543-1');
+    </script>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
@@ -98,11 +108,9 @@
         <div class="col-12 price-item card"><h5>Вартість послуг в межах Львова:</h5> 600 гривень повна вартість, не
             залежно від відстані перевезення автомобіля
         </div>
-        <div class="col-12 price-item card"><h5>Вартість послуг за межами Львова:</h5> 9 грн/км загального пробігу з точки
-            виїзду увакуатора і до повернення назад +200 гривень завантаження та розвантаження евакуатора
+        <div class="col-12 price-item card"><h5>Вартість послуг за межами Львова:</h5> 9 грн/км загального пробігу з точки виїзду евакуатора і до повернення назад +200 гривень завантаження та розвантаження евакуатора
         </div>
-        <div class="col-12 price-item card" id="specialOffer"><h5>Знижка</h5> при відстані перевезення автомобіля більше, ніж
-            200 км завантаження та розвантаження евакуатора <span>безкоштовне</span></div>
+        <div class="col-12 price-item card" id="specialOffer"><h5>Знижка</h5> при відстані перевезення автомобіля більше, ніж 200 км завантаження та розвантаження евакуатора <span>безкоштовне</span></div>
     </div>
 </main>
 <!--call button-->
