final without call back form (fixed anchors)

--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
                     <a href="#aboutUs" class="nav-link">Про нас</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#advantages" class="nav-link">Переваги</a>
+                    <a href="#advantagesAncor" class="nav-link">Переваги</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#price" class="nav-link">Ціни</a>
+                    <a href="#priceAnchor" class="nav-link">Ціни</a>
                 </li>
                 <li class="nav-item">
                     <a href="#specialOffer" class="nav-link">Акція</a>
@@ -62,7 +62,8 @@
         <span class="transparent-text">допомогти.</span>
     </div>
 </header>
-<main id="aboutUs">
+<main>
+    <span class="anchor" id="aboutUs"></span>
     <div class="row" style="margin: 0;">
         <div class="col-12 col-lg-6" id="aboutUsImgBox">
         </div>
@@ -77,6 +78,7 @@
             <p>Евакуатор обладнаний лебідкою.</p>
         </div>
     </div>
+    <span class="anchor" id="advantagesAncor"></span>
     <div class="row ourAdvantages" id="advantages">
         <div class="col-4">
             <div class="advantages-item border-right">
@@ -104,13 +106,14 @@
         </div>
     </div>
     <div class="row" id="price">
+        <span class="anchor" id="priceAnchor"></span>
         <h3 class="col-12 price-header">Ціни</h3>
         <div class="col-12 price-item card"><h5>Вартість послуг в межах Львова:</h5> 600 гривень повна вартість, не
             залежно від відстані перевезення автомобіля
         </div>
         <div class="col-12 price-item card"><h5>Вартість послуг за межами Львова:</h5> 9 грн/км загального пробігу з точки виїзду евакуатора і до повернення назад +200 гривень завантаження та розвантаження евакуатора
         </div>
-        <div class="col-12 price-item card" id="specialOffer"><h5>Знижка</h5> при відстані перевезення автомобіля більше, ніж 200 км завантаження та розвантаження евакуатора <span>безкоштовне</span></div>
+        <div class="col-12 price-item card"><span class="anchor" id="specialOffer"></span><h5>Знижка</h5> при відстані перевезення автомобіля більше, ніж 200 км завантаження та розвантаження евакуатора безкоштовне</div>
     </div>
 </main>
 <!--call button-->
